<resources>
    <string name="app_name">TPC</string>
    <string name="welcome_msg">Welcome</string>
    <string name="college_url">www.terna.org</string>

    <string name="logo">College Logo</string>

    <string name="notify">Notifications</string>
    <string name="add_details">Add details</string>

    <string name="check_status">Check Status</string>

    <string name="get_name">Enter name</string>
    <string name="get_email">Enter email</string>
    <string name="get_password">Enter password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="get_city">Enter nearest station</string>
    <string name="get_id">Enter ID</string>
    <string name="spinner_title">Choose domain</string>
    <string name="get_dob">Click to set Date Of Birth</string>

    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="new_acc"><u>Create new account</u></string>
    <string name="goToLogin"><u>Back to Login</u></string>
    <string name="logout">Logout</string>

    <string-array name="spinner_list">
        <item>(Choose your interest)</item>
        <item>Web Development</item>
        <item>Android Development</item>
        <item>Database</item>
        <item>Big data/HADOOP</item>
    </string-array>
    <string-array name="year_list">
        <item>(Choose your interest)</item>
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
    </string-array>
    <string-array name="branch_list">
        <item>(Choose your interest)</item>
        <item>Computer</item>
        <item>Electronics</item>
        <item>EXTC</item>
        <item>IT</item>
        <item>Mechanical</item>
        <item>Mechatronics</item>
    </string-array>
</resources>
