<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center_vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="org.terna.tpc.LoginActivity">

    <ImageView
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginId"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:hint="@string/get_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_alignEnd="@+id/loginNew"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:hint="@string/get_password"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"/>

    <TextView
        android:id="@+id/loginNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_acc"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>